--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Week 5 — Example 5 (Side-scroller + Camera + JSON)</title>
+    <title>Week 5 — Example 4 (JSON World + Smooth Camera)</title>
     <link rel="stylesheet" href="style.css" />
     <script src="libraries/p5.min.js"></script>
 
-    <!-- classes -->
-    <script src="Platform.js"></script>
+    <!-- Classes first -->
     <script src="WorldLevel.js"></script>
-    <script src="BlobPlayer.js"></script>
-    <script src="Camera2D.js"></script>
-    <script src="LevelLoader.js"></script>
+    <script src="Player.js"></script>
 
-    <!-- sketch last -->
+    <!-- Then sketch -->
     <script src="sketch.js"></script>
   </head>
   <body>
